<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:contentDescription="@string/item_background_image"
        android:scaleType="fitXY"
        android:src="@drawable/card_item_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/card_image"
            android:importantForAccessibility="no"
            android:src="@drawable/reversecard" />

        <LinearLayout
            android:id="@+id/card_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/card_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/card_layout_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/card_type_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/card_type_icon"
                        android:src="@drawable/token" />

                    <TextView
                        android:id="@+id/card_type_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_layout_atk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/card_atk_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/card_atk_value"
                        android:src="@drawable/sword" />

                    <TextView
                        android:id="@+id/card_atk_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_layout_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/card_def_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/card_def_value"
                        android:src="@drawable/shield" />

                    <TextView
                        android:id="@+id/card_def_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>